--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/dependency-injection": "^4.0|^5.0",
         "symfony/http-foundation": "^4.0|^5.0",
         "symfony/http-kernel": "^4.0|^5.0",
+        "symfony/property-access": "4.0|^5.0",
         "symfony/property-info": "^4.0|^5.0",
         "symfony/serializer": "^4.0|^5.0"
     },
