--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "symfony/config": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0",
         "symfony/http-foundation": "^4.0|^5.0",
-        "symfony/http-kernel": "^4.0|^5.0",
-        "symfony/property-access": "4.0|^5.0",
+        "symfony/property-access": "^4.0|^5.0",
         "symfony/property-info": "^4.0|^5.0",
         "symfony/serializer": "^4.0|^5.0"
     },
