--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "symfony/http-foundation": "^4.0|^5.0",
-        "symfony/property-access": "^4.0|^5.0",
-        "symfony/property-info": "^4.0|^5.0",
-        "symfony/serializer": "^4.0|^5.0"
+        "symfony/http-foundation": "^4.0|^5.0|^6.0",
+        "symfony/property-access": "^4.0|^5.0|^6.0",
+        "symfony/property-info": "^4.0|^5.0|^6.0",
+        "symfony/serializer": "^4.0|^5.0|^6.0"
     },
     "require-dev": {
-        "drjele/symfony-phpunit": "^2.0",
-        "friendsofphp/php-cs-fixer": "^3.1",
+        "drjele/symfony-phpunit": "^3.0",
+        "friendsofphp/php-cs-fixer": "^3.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
