--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "drjele/symfony-phpunit": "^3.0",
-        "friendsofphp/php-cs-fixer": "^3.3",
+        "friendsofphp/php-cs-fixer": "^3.4",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
@@ -57,6 +57,7 @@
         "exclude": [
             "/scripts",
             "/tests",
+            "/.php-cs-fixer.dist.php",
             "/.php_cs.dist",
             "/phpcs.xml.dist",
             "/phpunit.xml.dist"
