--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "drjele/symfony-phpunit": "^3.0",
         "friendsofphp/php-cs-fixer": "^3.4",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
