--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "symfony/http-foundation": "^4.0|^5.0|^6.0",
         "symfony/property-access": "^4.0|^5.0|^6.0",
         "symfony/property-info": "^4.0|^5.0|^6.0",
-        "symfony/serializer": "^4.0|^5.0|^6.0"
+        "symfony/serializer": "^4.0|^5.0|^6.0",
+        "symfony/translation-contracts": "^3.0"
     },
     "require-dev": {
         "drjele/symfony-phpunit": "^3.0",
