--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,6 @@
     "require": {
         "php": "^8.1",
         "symfony/http-foundation": "^4.0|^5.0|^6.0",
-        "symfony/property-access": "^4.0|^5.0|^6.0",
-        "symfony/property-info": "^4.0|^5.0|^6.0",
         "symfony/serializer": "^4.0|^5.0|^6.0",
         "symfony/translation-contracts": "^3.1"
     },
@@ -27,7 +25,9 @@
         "drjele/symfony-phpunit": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "squizlabs/php_codesniffer": "^3.7"
+        "phpstan/phpstan": "^1.9",
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/property-access": "^6.2"
     },
     "autoload": {
         "psr-4": {
@@ -54,15 +54,5 @@
     "prefer-stable": true,
     "config": {
         "sort-packages": true
-    },
-    "extra": {
-        "exclude": [
-            "/scripts",
-            "/tests",
-            "/.php-cs-fixer.dist.php",
-            "/.php_cs.dist",
-            "/phpcs.xml.dist",
-            "/phpunit.xml.dist"
-        ]
     }
 }
