--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": ">=8.2",
         "symfony/http-foundation": "^4.0|^5.0|^6.0",
         "symfony/serializer": "^4.0|^5.0|^6.0",
         "symfony/translation-contracts": "^3.1"
     },
     "require-dev": {
-        "drjele/symfony-phpunit": "^4.0",
+        "drjele/symfony-phpunit": "^5.0",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpstan": "^1.9",
         "squizlabs/php_codesniffer": "^3.7",
-        "symfony/property-access": "^6.2"
+        "symfony/property-access": "^4.0|^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -41,7 +41,7 @@
     },
     "scripts": {
         "install-hooks": [
-            "[ $COMPOSER_DEV_MODE -eq 1 ] && rm -rf .git/hooks && ln -s ../scripts/git_hooks .git/hooks || exit 0"
+            "[ $COMPOSER_DEV_MODE -eq 1 ] && rm -rf .git/hooks && ln -s ../dev/git-hooks .git/hooks || exit 0"
         ],
         "post-install-cmd": [
             "@install-hooks"
