--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
     ],
     "require": {
         "php": ">=8.2",
-        "symfony/http-foundation": "^4.0|^5.0|^6.0",
-        "symfony/serializer": "^4.0|^5.0|^6.0",
-        "symfony/translation-contracts": "^3.1"
+        "symfony/http-foundation": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/serializer": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/translation-contracts": "^3.4"
     },
     "require-dev": {
-        "drjele/symfony-phpunit": "^5.0",
-        "friendsofphp/php-cs-fixer": "^3.13",
+        "drjele/symfony-phpunit": "^5.1",
+        "friendsofphp/php-cs-fixer": "^3.42",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpstan": "^1.9",
-        "squizlabs/php_codesniffer": "^3.7",
-        "symfony/property-access": "^4.0|^5.0|^6.0"
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "^3.8",
+        "symfony/property-access": "^4.0|^5.0|^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
