--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
         "php": ">=8.2",
         "symfony/http-foundation": "^4.0|^5.0|^6.0|^7.0",
         "symfony/serializer": "^4.0|^5.0|^6.0|^7.0",
-        "symfony/translation-contracts": "^3.4"
+        "symfony/translation-contracts": "3.*"
     },
     "require-dev": {
-        "drjele/symfony-phpunit": "^5.1",
-        "friendsofphp/php-cs-fixer": "^3.42",
-        "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpstan": "^1.10",
-        "squizlabs/php_codesniffer": "^3.8",
+        "drjele/symfony-phpunit": "5.*",
+        "friendsofphp/php-cs-fixer": "3.*",
+        "phpdocumentor/reflection-docblock": "5.*",
+        "phpstan/phpstan": "1.*",
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/property-access": "^4.0|^5.0|^6.0|^7.0"
     },
     "autoload": {
